Complete api documeentation for swagger
